# mlfs-book

./: Makefile  README.md  pyproject.toml
.github/workflows/: air-quality-daily.yml
data/: copenhagen-andersens.csv  copenhagen-lundemosen.csv  copenhagen.csv  tomtebo-vittervägen.csv
docs/: .gitignore  _config.yml  index.md
docs/_layouts/: default.html
docs/air_quality/: index.md
docs/air_quality_lagged/: index.md
docs/assets/css/: custom.css
mlfs/: 1_air_quality_feature_backfill.py  2_air_quality_feature_pipeline.py  3_air_quality_training_pipeline.py  4_air_quality_batch_inference.py  clean_hopsworks_resources.py  config.py
mlfs/airquality/: air_quality_data_retrieval.py  util.py
notebooks/airquality/: 1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3_air_quality_training_pipeline.ipynb  4_air_quality_batch_inference.ipynb  5_function_calling.ipynb
src/: 1_air_quality_feature_backfill.py  2_air_quality_feature_pipeline.py  3_air_quality_training_pipeline.py  4_air_quality_batch_inference.py  CODE_IMPROVEMENTS.md
