[tool.setuptools]
packages = ["mlfs"]

[project]
name = "mlfs-book"
version = "0.1.0"
description = "Build AI Systems with a Feature Store"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name="Adrian Thees", email="thees@kth.se" },
    { name="Tomás Teixeira", email="tomast@kth.se" },
]
dependencies = [
    "hopsworks[python,great-expectations]==4.2.*",
    "python-dotenv",
    "pydantic-settings>=2.6.1",
    # util.py
    "geopy==2.4.1",
    "openmeteo-requests",
    "requests-cache==1.2.0",
    "retry-requests==2.0.0",
    # model training
    "xgboost==2.0.3",
    "scikit-learn==1.2.2",
    "matplotlib==3.8.3",
]
